tests/error/comptime/check_inplace_construct1.bz
// error: invalid construction of an object of type 'int32'
// note: while evaluating expression at compile time
// note: address points to a stack object from a finished stack frame
// error: failed to evaluate expression at compile time
function foo() -> *mut int32
{
	mut i = 0;
	return &i;
}

function test()
{
	(consteval {
		__builtin_inplace_construct(foo(), 0);
	});
}
